<resources>


    <!--To Support Other Languages-->
    <string name="app_name">UncommonClothing</string>

    <string name="welcome">Welcome</string>
    <string name="signUpText">Sign Up!</string>
    <string name="createAccount">Create Account!</string>
    <string name="searchBar">Search Clothing</string>
    <string name="addToCart">Add To Cart</string>
    <string name="myCart">My Cart</string>
    <string name="itemsTot">Items Total:</string>
    <string name="delCost">Delivery Cost:</string>
    <string name="total">Total:</string>
    <string name="checkout">Checkout</string>
    <string name="cartIsEmpty">Your Cart is Empty</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="cpassword">Confirm Password</string>
    <string name="login">Login</string>
    <string name="signup">Do not have an account? Sign Up</string>
    <string name="changeLang">Change Language</string>

    <string name="top">Top</string>
    <string name="bottoms">Bottoms</string>
    <string name="hoodies">Hoodies</string>
    <string name="jeans">Jeans</string>

    <string name="title_activity_tops_view">TopsViewActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>